[project]
name = "Assignment-Spam-Filter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Maximilian Nachbaur", email = ""},
]
dependencies = ["scikit-learn>=1.6.0", "pandas>=2.2.3", "bs4>=0.0.2", "matplotlib>=3.10.0", "seaborn>=0.13.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
